--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,8 +214,9 @@ input, select, textarea {
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
-			color: inherit;
+			color: black;
 			border-bottom: 0;
+	
 		}
 
 	h2 {
