--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -204,7 +204,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #f8f8f8;
+		color: #000000;
 		font-family: "Raleway", Helvetica, sans-serif;
 		font-weight: 800;
 		letter-spacing: 0.25em;
@@ -2643,6 +2643,7 @@ input, select, textarea {
 		.mini-post .image {
 			overflow: hidden;
 			width: 100%;
+			height: 50%;
 		}
 
 			.mini-post .image img {
